# anti-ministry-ministry-club

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json
config/: avantis.json  show.json  wing.json
config/prompts/: README.txt  genre_acoustic.txt  genre_edm.txt  genre_jazz.txt  genre_rock.txt  genre_worship.txt  mix_balance_reference.txt  mix_engineer_core.txt  mix_troubleshooting.txt
docs/: DATA_FLOW.md  RUNNING.md
electron/: .gitignore  main.js  package-lock.json  package.json  preload.js
electron/assets/: ICONS.md
electron/lib/: config.js  updater.js
electron/renderer/: app.js  index.html  styles.css
electron/tests/: config.test.js  preload.test.js  updater.test.js
include/agent/: ActionExecutor.hpp  ActionValidator.hpp  SoundEngineerAgent.hpp
include/analysis/: AudioAnalyser.hpp  MeterBridge.hpp
include/approval/: ApprovalQueue.hpp  ApprovalUI.hpp
include/audio/: FFTAnalyser.hpp  IAudioCapture.hpp  NullAudioCapture.hpp  PortAudioCapture.hpp  RingBuffer.hpp
include/console/: AvantisAdapter.hpp  ConsoleModel.hpp  IConsoleAdapter.hpp  ParameterTypes.hpp  WingAdapter.hpp  X32Adapter.hpp
include/discovery/: ChannelProfile.hpp  ConsoleDiscovery.hpp  DiscoveryOrchestrator.hpp  DynamicChannelMap.hpp  LLMDiscoveryReview.hpp  NameClassifier.hpp  SpectralClassifier.hpp  StereoPairDetector.hpp
include/llm/: ActionSchema.hpp  GenrePreset.hpp  LLMDecisionEngine.hpp  PreferenceLearner.hpp  SessionMemory.hpp
include/ui/: TerminalUI.hpp
scripts/: build.sh  network-setup.sh  preshow-check.sh  start.sh
src/: main.cpp
src/agent/: SoundEngineerAgent.cpp
src/analysis/: AudioAnalyser.cpp  MeterBridge.cpp
src/approval/: ApprovalQueue.cpp  ApprovalUI.cpp
src/audio/: PortAudioCapture.cpp
src/console/: AvantisAdapter.cpp  WingAdapter.cpp  X32Adapter.cpp
src/discovery/: DiscoveryOrchestrator.cpp
tests/: X32AdapterE2ETest.cpp  test_action_validator.cpp  test_approval_queue.cpp  test_channel_map.cpp  test_console_model.cpp  test_fft_analyser.cpp  test_genre_preset.cpp  test_llm_parse_resilience.cpp  test_mix_issues.cpp  test_name_classifier.cpp  test_pipeline.cpp  test_preference_learner.cpp  test_prompt_loading.cpp  test_ring_buffer.cpp  test_session_memory.cpp  test_stereo_pair.cpp
(+3 files in other folders)
